# forumdata

./: .gitignore  CLAUDE.md  Makefile  architecture.md  bible.md  codebase.md  package.json  pyproject.toml  research.md  turbo.json
.claude/: settings.json  settings.local.json
.claude/agents/: thoughts-locator.md
.claude/commands/: ci_commit.md  create_handoff.md  create_plan.md  debug.md  describe_pr.md  describe_pr_nt.md  implement_plan.md  iterate_plan.md  research_codebase.md  resume_handoff.md  validate_plan.md
.github/workflows/: main.yml
apps/api/: pyproject.toml
apps/site/: astro.config.mjs  package.json  style.md
apps/site/src/components/: LandingPage.tsx  TerrainCanvas.tsx  Typewriter.tsx
apps/site/src/layouts/: Layout.astro
apps/site/src/pages/: index.astro
apps/site/src/styles/: global.css
